
R0.3.0  M. Dunning - 2021-04-14
    - drvMBus: inherit from drvModbusAsyn and remove custom modbus code.  
            Now drvMBus is an asynPortDriver and can call modbus and 
            asynPortDriver methods directly.  This requires modbus version >= R3.0.
    - Fix issue with data leakage between ports when running multiple 
            couplers in a single ioc
    - Use findAsynPortDriver() instead of linked list to return pointer to drvMBus driver
    - Reorganize ioc shell config files and constructors to be more intuitive and match other drivers.
            This requires changes to st.cmd files, so THIS CHANGE IS NOT BACKWARD COMPATIBLE.
    - Remove histogram code.  This can be done with the modbus module by loading
            the statistics template.
    - Remove custom locking code, use asynPortDriver lock() and unlock() instead.
    - Fix readbacks of coupler read/write registers, including watchdog timeout
    - Set all channels/params to invalid severity when there is a communication error
    - Clean up source code formatting; remove unused parameters
    - Use new asynPortDriver constructor which doesn't need the parameter list length
    - Remove functionality to read/write arbitrary memory address.  This is not needed.
    - Redo report() methods so drvMBus info is not printed for each bkh port
    - Add records for message queue counts and sizes
    - New coupler db files.  Old versions are retained for compatibility, but new versions
            are cleaner and have more intuitive PV names.

R0.2.1  M. Dunning - 2020-10-06
    - Use asyn R4.39-0.0.1

R0.2.0  Kukhee Kim - 2019-09-26
   - merge R0.1.5-multi_instances into master branch
   - support multiple instances in an ioc
   - build against asyn R4.32-1.0.0   
  

R0.1.5-1.1   Kukhee Kim - 2019-09-26
    - support asyn R4.32-1.0.0

R0.1.5-1.0   Kukhee Kim - 2019-09-25
    - support multiple instances in a a single ioc